--- a/catalogo.html
+++ b/catalogo.html
@@ -53,12 +53,26 @@
             <img src="img/halloween2.jpg" alt="🎃 Halloween" onclick="abrirModal(this)">
             <h3>🎃 Halloween chupetines (30u)</h3>
             <p>$7.800</p>
+            <p>(Hacé click para ver más fotos 👀)</p>
+          </div>
+
+          <div class="card">
+            <img src="img/gelatinaDiferentesSabores1.jpg" alt="Gelatinas con formas (30u) onclick="abrirModal(this)">
+            <h3>Gelatinas con formas (30u)</h3>
+            <p>$6.900</p>
+            <p>(Hacé click para ver más fotos 👀)</p>
           </div>
 
           <div class="card">
             <img src="img/ss.jpg" alt="Brains" onclick="abrirModal(this)">
             <h3>Gomitas blandas Brains (30u)</h3>
             <p>$7.000</p>
+          </div>
+
+          <div class="card">
+            <img src="img/mechasMario2.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
+            <h3>Mechas mágicas (30u)</h3>
+            <p>$9.500</p>
           </div>
 
           <div class="card">
@@ -92,15 +106,10 @@
           </div>
 
           <div class="card">
-            <img src="img/mecha.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
-            <h3>Mechas mágicas (30u)</h3>
-            <p>$9.500</p>
-          </div>
-
-          <div class="card">
             <img src="img/burbujero3.jpg" alt="Burbujero" onclick="abrirModal(this)">
             <h3>Burbujeros (24u)</h3>
             <p>$15.000</p>
+            <p>(Hacé click para ver más fotos 👀)</p>
           </div>
 
           <div class="card">
@@ -221,6 +230,7 @@
             <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
             <h3>Alcancías con gelatinas</h3>
             <p>$4.500 (CADA UNA)</p>
+            <p>(Hacé click para ver más fotos 👀)</p>
           </div>
 
           <div class="card">
