--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       <div class="card">
         <img src="img/burbujero3.jpg" alt="Burbujero mágico" onclick="abrirModal(this)">
-        <h3>Burbujero(x30u)</h3>
+        <h3>Burbujero(x24u)</h3>
         <p>$15.000</p>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
       </div>
@@ -58,8 +58,8 @@
       </div>
       
       <div class="card">
-        <img src="img/tel.jpg" alt="Auto/camiseta/celular/spiderman + chicles" onclick="abrirModal(this)">
-        <h3>Celu + chicles (x30)</h3>
+        <img src="img/cars2.jpg" alt="cars" onclick="abrirModal(this)">
+        <h3>Cars + chicles (x30)</h3>
         <p>$8.500</p>
         <button onclick="window.location.href='catalogo.html'">Ver más</button>
       </div>
