--- a/catalogo.html
+++ b/catalogo.html
@@ -57,7 +57,7 @@
           </div>
 
           <div class="card">
-            <img src="img/gelatinaDiferentesSabores1.jpg" alt="Gelatinas con formas (30u) onclick="abrirModal(this)">
+            <img src="img/gelatinaDiferentesSabores1.jpg" alt="Gelatinas con formas (30u)" onclick="abrirModal(this)">
             <h3>Gelatinas con formas (30u)</h3>
             <p>$6.900</p>
             <p>(Hacé click para ver más fotos 👀)</p>
