--- a/catalogo.html
+++ b/catalogo.html
@@ -7,7 +7,7 @@
   <!-- Redirige automáticamente en 3 segundos a la página de catálogo mayorista -->
   <meta http-equiv="refresh" content="3; url=MAYORISTA_CATALOGO.html">
 
-  <title>🛍️ Golosinas Aries - Mejores precios</title>
+  <title>Golosinas Aries  ♈ 🔥 - Catálogo MAYORISTA</title>
 
   <style>
     /* ==============================
