--- a/catalogo.html
+++ b/catalogo.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Golosinas Aries  ♈ 🔥 - Catálogo MAYORISTA</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   
   <!-- Redirige automáticamente en 3 segundos a la página de catálogo mayorista -->
   <meta http-equiv="refresh" content="3; url=MAYORISTA_CATALOGO.html">
-
-  <title>Golosinas Aries  ♈ 🔥 - Catálogo MAYORISTA</title>
-
   <style>
     /* ==============================
        Reset básico
