--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -22,7 +22,7 @@
     </h1>
     <nav>
       <a href="index.html">Inicio</a>
-      <a href="catalogo.html">Catálogo MAYORISTA</a>
+      <a href="catalogo.html">Catálogo</a>
       <a href="contacto.html">Contacto</a>
       <input type="text" id="search" placeholder="🔍 Buscá un producto..." style="margin-left:0.1rem; padding:0.3rem; border-radius:5px; border:none;">
       <p id="no-results" style="display:none; text-align:center; color:#fff; margin-top:1rem;"></p>
