cambios en el boton flotante

--- a/contacto.html
+++ b/contacto.html
@@ -66,12 +66,15 @@
     
 </main>
 
-<!-- Botón flotante de WhatsApp -->
-<a href="https://wa.me/542236010443?text=Hola%2C%20quiero%20más%20información" target="_blank">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" 
-    alt="WhatsApp" 
-    style="width:65px; height:65px; position:fixed; bottom:20px; right:20px; z-index:1000;">
-</a>  
+<!-- Botón flotante de WhatsApp con texto -->
+<a href="https://wa.me/542236010443?text=Hola%2C%20vengo%20del%20catálogo%20y%20tengo%20un%20pedido/pregunta%20para%20hacerte%20" target="_blank" style="text-decoration: none;">
+  <div style="position:fixed; bottom:20px; right:20px; z-index:1000; display:flex; align-items:center; background-color:#25D366; padding:10px 15px; border-radius:50px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); color:white; font-family:sans-serif; font-size:14px;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png"
+         alt="WhatsApp"
+         style="width:25px; height:25px; margin-right:10px;">
+    <span>Hacer mi pedido/consulta</span>
+  </div>
+</a>
 
 <footer>
 
