Ajustes en modal, agrego boton de -agregar al pedido-

--- a/contacto.html
+++ b/contacto.html
@@ -32,6 +32,21 @@
     </nav>
 
   </div>
+     <!-- carrito
+  <div id="carrito-contenedor">
+    <button id="carrito-btn">
+      <i class="fas fa-shopping-cart"></i>
+      <span id="carrito-count">0</span>
+    </button>
+    <div id="carrito-dropdown">
+      <h4>Tu carrito</h4>
+      <ul id="carrito-items"></ul>
+      <p id="carrito-total">Total: $0</p>
+      <button id="vaciar-carrito">Vaciar carrito</button>
+    </div>
+  </div>
+  -->
+
 </header>
 
 <!-- Contacto -->
