--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -516,23 +516,9 @@
   </main>
 
   <footer>
-    <!-- Botones sociales -->
-    <div class="social-buttons-wrapper">
-      <div class="social-buttons">
-        <a href="https://instagram.com/golosinasaries" target="_blank" class="social-btn instagram">
-          <i class="fab fa-instagram"></i> Instagram
-        </a>
-        <a href="https://www.facebook.com/profile.php?id=61577104861271&locale=es_LA" target="_blank" class="social-btn facebook">
-          <i class="fab fa-facebook"></i> Facebook
-        </a>
-        <a href="https://wa.me/542236010443" target="_blank" class="social-btn whatsapp">
-          <i class="fab fa-whatsapp"></i> WhatsApp
-        </a>
-        <a href="#" class="back-to-top">⬆ Volver arriba</a>
-      </div>
-    </div>
+    <a href="#" class="back-to-top">⬆ Inicio</a>
     
-     <p>© 2025 Golosinas Aries. Todos los derechos reservados.</p>
+    <p>© 2025 Golosinas Aries. Todos los derechos reservados.</p>
 
   </footer>
 
