--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Escribinos 🔥</title>
+  <title> Seguinos!</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/estilos.css">
   <!-- Font Awesome para iconos -->
@@ -53,7 +53,7 @@
 <main>
     
     <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
-      <p class="hero"> Podés contactarnos a través de:</p>
+      <p class="hero"> Seguinos!:</p>
     </aside>
 
       <!-- Botones sociales -->
@@ -63,9 +63,6 @@
         </a>
         <a href="https://www.facebook.com/profile.php?id=61577104861271&locale=es_LA" target="_blank" class="social-btn facebook">
           <i class="fab fa-facebook"></i> Facebook
-        </a>
-        <a href="https://wa.me/542236010443" target="_blank" class="social-btn whatsapp">
-          <i class="fab fa-whatsapp"></i> WhatsApp
         </a>
       </div>
    
