--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -172,21 +172,21 @@
 
         <div class="card">
           <img src="img/gomitasblandas3.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas(30u)</h3>
+          <h3>Gomitas blandas de boca(30u)</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/gomitasblandas4.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas(30u)</h3>
+          <h3>Gomitas blandas de river(30u)</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/gomitasblandas5.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas(30u)</h3>
+          <h3>Gomitas blandas Among Us(30u)</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -200,21 +200,14 @@
 
         <div class="card">
           <img src="img/gomitasblandas2.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas(30u)</h3>
+          <h3>Gomitas blandas hombre araña(30u)</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/gomitasblandas7.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas(30u)</h3>
-          <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-        </div>
-
-        <div class="card">
-          <img src="img/gomitasblandas9.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas(30u)</h3>
+          <h3>Gomitas blandas.(30u) Sin stock</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -256,7 +249,7 @@
 
         <div class="card">
           <img src="img/capibara.jpg" alt="Capibaras" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Capibaras (30u)</h3>
+          <h3>Gomitas blandas Capibaras (30u) Sin stock</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -305,7 +298,7 @@
 
         <div class="card">
           <img src="img/chupetinesconforma1.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
-          <h3>Chupetines con formas (x30)</h3>
+          <h3>Chupetines con formas (x30) Sin stock</h3>
           <p>$8.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
