--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -221,21 +221,21 @@
 
         <div class="card">
           <img src="img/chupetinBrain.jpg" alt="Chupetín Brain" onclick="abrirModal(this)">
-          <h3>Chupetín con polvo ácido Brain(30u)</h3>
+          <h3>Chupetin con polvo ácido Brain(30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo ácido" onclick="abrirModal(this)">
-          <h3>Chupetín con polvo ácido (30u)</h3>
+          <h3>Chupetin con polvo ácido (30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/cajaCalabaza.jpg" alt="Chupetin calabaza" onclick="abrirModal(this)">
-          <h3>Chupetín Calabaza con polvo ácido (30u)</h3>
+          <h3>Chupetin Calabaza con polvo ácido (30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -263,7 +263,7 @@
 
         <div class="card">
           <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
-          <h3>Alcancías con gelatinas</h3>
+          <h3>Alcancias con gelatinas</h3>
           <p>$4.500 (CADA UNA)</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -291,7 +291,7 @@
 
         <div class="card">
           <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-          <h3>Chupetín con polvo ácido (x30u)</h3>
+          <h3>Chupetin con polvo ácido (x30u)</h3>
           <p>$9.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -333,7 +333,7 @@
 
         <div class="card">
           <img src="img/popping.jpg" alt="Polvo ácido Popping candy" onclick="abrirModal(this)">
-          <h3>Polvo ácido (x30u)</h3>
+          <h3>Polvo acido (x30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
