--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -221,21 +221,21 @@
 
         <div class="card">
           <img src="img/chupetinBrain.jpg" alt="Chupetín Brain" onclick="abrirModal(this)">
-          <h3>Chupetin con polvo ácido Brain(30u)</h3>
+          <h3>Chupetin con polvo acido Brain(30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
-          <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo ácido" onclick="abrirModal(this)">
-          <h3>Chupetin con polvo ácido (30u)</h3>
+          <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo acido" onclick="abrirModal(this)">
+          <h3>Chupetin con polvo acido (30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/cajaCalabaza.jpg" alt="Chupetin calabaza" onclick="abrirModal(this)">
-          <h3>Chupetin Calabaza con polvo ácido (30u)</h3>
+          <h3>Chupetin Calabaza con polvo acido (30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -291,7 +291,7 @@
 
         <div class="card">
           <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-          <h3>Chupetin con polvo ácido (x30u)</h3>
+          <h3>Chupetin con polvo acido (x30u)</h3>
           <p>$9.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -332,7 +332,7 @@
         </div>
 
         <div class="card">
-          <img src="img/popping.jpg" alt="Polvo ácido Popping candy" onclick="abrirModal(this)">
+          <img src="img/popping.jpg" alt="Polvo acido Popping candy" onclick="abrirModal(this)">
           <h3>Polvo acido (x30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
@@ -438,7 +438,7 @@
 
         <div class="card">
           <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
-          <h3>Gomitas ácidas (500g)</h3>
+          <h3>Gomitas acidas (500g)</h3>
           <p>$6.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
