--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       <div class="card">
         <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-        <h3>Chupetín con polvo acido (x30u)</h3>
+        <h3>Chupetin con polvo acido (x30u)</h3>
         <p>$8.400</p>
         <button class="btn-carrito">Agregar al pedido</button>
       </div>
@@ -81,7 +81,7 @@
 
       <div class="card">
         <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
-        <h3>Bolas Pokémon con sorpresa y caramelo</h3>
+        <h3>Bolas Pokemon con sorpresa y caramelo</h3>
         <p>$10.500</p>
         <button class="btn-carrito">Agregar al pedido</button>
       </div>
