Actualizacion del catalogo

--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -66,6 +66,13 @@
         </div>
 
         <div class="card">
+          <img src="img/gomitablandaCara3.jpg" alt="Gomitas con forma de cara" onclick="abrirModal(this)">
+          <h3>Gomitas (30u)</h3>
+          <p>$8.800</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
           <img src="img/halloween2.jpg" alt="🎃 Halloween" onclick="abrirModal(this)">
           <h3>🎃 Halloween chupetines (30u)</h3>
           <p>$7.800</p>
@@ -79,16 +86,10 @@
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
-        <div class="card">
-          <img src="img/ss.jpg" alt="Brains" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Brains (30u)</h3>
-          <p>$7.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-        </div>
 
         <div class="card">
-          <img src="img/mechasMario2.jpg" alt="Mechas mágicas" onclick="abrirModal(this)">
-          <h3>Mechas mágicas (30u)</h3>
+          <img src="img/mechasMario2.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
+          <h3>Mechas magicas (30u)</h3>
           <p>$9.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -115,31 +116,24 @@
         </div>
 
         <div class="card">
-          <img src="img/LATAS.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
+          <img src="img/lataschicas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
           <h3>Latitas con chicles (x30)</h3>
           <p>$11.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
-          <img src="img/botellitas1.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
+          <img src="img/botellitas.jpg" alt="Botellitas con chicles" onclick="abrirModal(this)">
           <h3>Botellitas con chicles (30u)</h3>
           <p>$10.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
-          <img src="img/burbujero3.jpg" alt="Burbujero" onclick="abrirModal(this)">
+          <img src="img/burbujeros.jpg" alt="Burbujeros" onclick="abrirModal(this)">
           <h3>Burbujeros (24u)</h3>
           <p>$15.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
-        </div>
-
-        <div class="card">
-          <img src="img/beisball1.jpg" alt="beisball" onclick="abrirModal(this)">
-          <h3>Béisbol(30u)</h3>
-          <p>$8.500</p>
-         <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
@@ -207,7 +201,7 @@
 
         <div class="card">
           <img src="img/gomitasblandas7.jpg" alt="Gomitas blandas" onclick="abrirModal(this)">
-          <h3>Gomitas blandas.(30u) Sin stock</h3>
+          <h3>Gomitas blandas.(30u)</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -228,7 +222,7 @@
 
         <div class="card">
           <img src="img/chupetinConAcido.jpg" alt="Chupetín con polvo acido" onclick="abrirModal(this)">
-          <h3>Chupetin con polvo acido (30u)</h3>
+          <h3>Chupetin con polvo acido skull (30u)</h3>
           <p>$8.400</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -249,7 +243,7 @@
 
         <div class="card">
           <img src="img/capibara.jpg" alt="Capibaras" onclick="abrirModal(this)">
-          <h3>Gomitas blandas Capibaras (30u) Sin stock</h3>
+          <h3>Gomitas blandas Capibaras (30u)</h3>
           <p>$7.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -262,7 +256,7 @@
         </div>
 
         <div class="card">
-          <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
+          <img src="img/alcancias1.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
           <h3>Alcancias con gelatinas</h3>
           <p>$4.500 (CADA UNA)</p>
           <button class="btn-carrito">Agregar al pedido</button>
@@ -297,14 +291,14 @@
         </div>
 
         <div class="card">
-          <img src="img/chupetinesconforma1.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
-          <h3>Chupetines con formas (x30) Sin stock</h3>
+          <img src="img/chupetinesconformas.jpg" alt="Chupetines con formas" onclick="abrirModal(this)">
+          <h3>Chupetines con formas (x30)</h3>
           <p>$8.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
-          <img src="img/chupetincoronled.jpg" alt="Coronas LED" onclick="abrirModal(this)">
+          <img src="img/chupetinesconled1.jpg" alt="Coronas LED" onclick="abrirModal(this)">
           <h3>Chupetines de Corona con LED (x30u)</h3>
           <p>$9.000</p>
           <button class="btn-carrito">Agregar al pedido</button>
@@ -360,13 +354,6 @@
         </div>
 
         <div class="card">
-          <img src="img/animalitos.jpg" alt="Gelatinas con forma de animales" onclick="abrirModal(this)">
-          <h3>Gelatinas (100u)</h3>
-          <p>$30.000</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-        </div>
-
-        <div class="card">
           <img src="img/gomitapancho.jpg" alt="Gomitas" onclick="abrirModal(this)">
           <h3>Gomitas con forma de pancho (x30u)</h3>
           <p>$8.500</p>
@@ -388,8 +375,8 @@
         </div>
 
         <div class="card">
-          <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
-          <h3>Bolas Pokémon con sorpresa y chicle (x30u)</h3>
+          <img src="img/poke.jpg" alt="Bolas Pokemon con sorpresa y caramelo" onclick="abrirModal(this)">
+          <h3>Bolas Pokemon con sorpresa y chicle (x30u)</h3>
           <p>$10.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -430,9 +417,9 @@
         </div>
 
         <div class="card">
-          <img src="img/bull_dog_frutillaa.jpg" alt="Bull dog" onclick="abrirModal(this)">
-          <h3>Gomitas Bull dog (360g)</h3>
-          <p>$6.000</p>
+          <img src="img/bulldog2.jpg" alt="Bull dog" onclick="abrirModal(this)">
+          <h3>Gomitas Bull dog Frutilla (500g)</h3>
+          <p>$</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
