--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
       <div class="portfolio">
 
       <div class="card">
-        <img src="img/burbujero3.jpg" alt="Burbujero mágico" onclick="abrirModal(this)">
+        <img src="img/burbujeros.jpg" alt="Burbujero" onclick="abrirModal(this)">
         <h3>Burbujero(x24u)</h3>
         <p>$15.000</p>
         <button class="btn-carrito">Agregar al pedido</button>
       </div>
 
       <div class="card">
-        <img src="img/alcancias.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
-        <h3>Alcancías con gelatinas</h3>
+        <img src="img/alcancias1.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+        <h3>Alcancias con gelatinas</h3>
         <p>$4.500 (CADA UNA)</p>
         <button class="btn-carrito">Agregar al pedido</button>
       </div>
@@ -80,7 +80,7 @@
       
 
       <div class="card">
-        <img src="img/poke.jpg" alt="Bolas Pokémon con sorpresa y caramelo" onclick="abrirModal(this)">
+        <img src="img/poke.jpg" alt="Bolas Pokemon con sorpresa y caramelo" onclick="abrirModal(this)">
         <h3>Bolas Pokemon con sorpresa y caramelo</h3>
         <p>$10.500</p>
         <button class="btn-carrito">Agregar al pedido</button>
