Actualizacion del catalogo

--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -257,7 +257,42 @@
 
         <div class="card">
           <img src="img/alcancias1.jpg" alt="Alcancías con gelatinas" onclick="abrirModal(this)">
-          <h3>Alcancias con gelatinas</h3>
+          <h3>Alcancias con gelatinas Oso</h3>
+          <p>$4.500 (CADA UNA)</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/alcancias2.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+          <h3>Alcancias con gelatinas Pinguino amarillo</h3>
+          <p>$4.500 (CADA UNA)</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/alcanciapinguino.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+          <h3>Alcancias con gelatinas Pinguino</h3>
+          <p>$4.500 (CADA UNA)</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/alcanciapinguinorojo.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+          <h3>Alcancias con gelatinas Pinguino rojo</h3>
+          <p>$4.500 (CADA UNA)</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/alcanciapinguinorosa.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+          <h3>Alcancias con gelatinas Pinguino rosa</h3>
+          <p>$4.500 (CADA UNA)</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/alcanciaojoamarillo.jpg" alt="Alcancias con gelatinas" onclick="abrirModal(this)">
+          <h3>Alcancias con gelatinas Oso amarillo</h3>
           <p>$4.500 (CADA UNA)</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
@@ -333,7 +368,7 @@
         </div>
 
         <div class="card">
-          <img src="img/mentitas1.jpg" alt="Cool Mint" onclick="abrirModal(this)">
+          <img src="img/coolmint.jpg" alt="Cool Mint" onclick="abrirModal(this)">
           <h3>Cool Mint sabores frutales (x30u)</h3>
           <p>$8.800</p>
           <button class="btn-carrito">Agregar al pedido</button>
@@ -419,42 +454,126 @@
         <div class="card">
           <img src="img/bulldog2.jpg" alt="Bull dog" onclick="abrirModal(this)">
           <h3>Gomitas Bull dog Frutilla (500g)</h3>
-          <p>$</p>
+          <p>$6.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/bulldogacido.jpg" alt="Bull dog" onclick="abrirModal(this)">
+          <h3>Gomitas Bull dog acidas (500g)</h3>
+          <p>$6.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/gomutcho_acidos.jpg" alt="Gomitas Gomutcho acidos" onclick="abrirModal(this)">
-          <h3>Gomitas acidas (500g)</h3>
+          <h3>Gomitas acidas gomutcho (500g)</h3>
           <p>$6.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
-          <h3>Bombones Surtidos (50 unidades)</h3>
-          <p>$8.400</p>
+          <h3>Bocaditos Bel (50 unidades)</h3>
+          <p>$7.200</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/yummyfrutillaconcrema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Yummy frutilla con crema (500g)</h3>
+          <p>$6.300</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/yummybananitas.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Yummy bananitas (500g)</h3>
+          <p>$6.300</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/yummyacidas.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Yummy acidas (500g)</h3>
+          <p>$6.300</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/billikenredonditas.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Billiken redonditas (800g)</h3>
+          <p>$6.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/billikentuttifruti.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Billiken tutti frutti (800g)</h3>
+          <p>$6.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/fieritamanzana.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Fierita redonditas (500g)</h3>
+          <p>$5.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/fieritayogurt.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Fierita yogur (500g)</h3>
+          <p>$5.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/fieritafrutilla.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Fierita frutilla (500g)</h3>
+          <p>$5.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/fieritacangrejos.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Fierita caramelos masticables (100u)</h3>
+          <p>$3.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/chupetinespelotitas.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Chupetines pelotitas (50u)</h3>
+          <p>$3.200</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/lapiniataredonditas.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Piñata redonditas (700g)</h3>
+          <p>$6.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
           <img src="img/anillos.jpg" alt="Anillos" onclick="abrirModal(this)">
-          <h3>Gomitas Anillos (700g)</h3>
+          <h3>Gomitas Piñata Anillos (700g)</h3>
           <p>$6.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
-          <img src="img/yummy_frutilla_com_crema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
-          <h3>Gomitas Yummy frutilla con crema (500g)</h3>
+          <img src="img/pete.jpg" alt="Anillos" onclick="abrirModal(this)">
+          <h3>Gomitas Piñata pete (700g)</h3>
           <p>$6.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
-          <img src="img/ojoschicos.jpg" alt="Ojos CHICOS" onclick="abrirModal(this)">
-          <h3>Ojos chiquitos (x200 unidades)</h3>
-          <p>Sin stock</p>
+          <img src="img/huesos.jpg" alt="Anillos" onclick="abrirModal(this)">
+          <h3>Gomitas Piñata huesos (700g)</h3>
+          <p>$6.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
@@ -481,8 +600,8 @@
 
 </div>
 
-      </section>
-      </section>
+    </section>
+    </section>
 
     <!-- Modal -->
     <div id="modal" class="modal">
