--- a/index.html
+++ b/index.html
@@ -70,15 +70,7 @@
         <p>$4.500 (CADA UNA)</p>
         <button class="btn-carrito">Agregar al pedido</button>
       </div>
-
-      <div class="card">
-        <img src="img/lolly.jpg" alt="Foot Lollipop" onclick="abrirModal(this)">
-        <h3>Chupetin con polvo acido (x30u)</h3>
-        <p>$8.400</p>
-        <button class="btn-carrito">Agregar al pedido</button>
-      </div>
       
-
       <div class="card">
         <img src="img/poke.jpg" alt="Bolas Pokemon con sorpresa y caramelo" onclick="abrirModal(this)">
         <h3>Bolas Pokemon con sorpresa y caramelo</h3>
@@ -93,9 +85,32 @@
         <button class="btn-carrito">Agregar al pedido</button>
       </div>
 
+      <div class="card">
+          <img src="img/lataschicas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
+          <h3>Latitas con chicles (x30)</h3>
+          <p>$11.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+      </div>
+
+      <div class="card">
+          <img src="img/yummyfrutillaconcrema.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <h3>Gomitas Yummy frutilla con crema (500g)</h3>
+          <p>$6.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+      </div>
+
       </div>
     </section>
-    
+
+     <!-- Modal -->
+    <div id="modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <img id="modal-img" src="" alt="Producto">
+        <p id="modal-title"></p>
+      </div>
+    </div>
+
   </main>
 
   <!-- Footer con botones de redes sociales -->
