Actualizacion del catalogo

--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -529,16 +529,23 @@
         </div>
 
         <div class="card">
-          <img src="img/fieritafrutilla.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <img src="img/fieritafrutilla.jpg" alt="Fierita" onclick="abrirModal(this)">
           <h3>Gomitas Fierita frutilla (500g)</h3>
           <p>$5.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
         <div class="card">
-          <img src="img/fieritacangrejos.jpg" alt="Yummy frutilla con crema" onclick="abrirModal(this)">
+          <img src="img/fieritacangrejos.jpg" alt="caramelos masticables" onclick="abrirModal(this)">
           <h3>Fierita caramelos masticables (100u)</h3>
           <p>$3.500</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+        <div class="card">
+          <img src="img/lheritier.jpg" alt="caramelos masticables" onclick="abrirModal(this)">
+          <h3>Lheritier caramelos masticables (300g)</h3>
+          <p>$2.800</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
