Actualizacion del catalogo

--- a/MAYORISTA_CATALOGO.html
+++ b/MAYORISTA_CATALOGO.html
@@ -49,7 +49,7 @@
  <!-- Hero -->
   <aside class= "hero" style="background-image: url('img/hero-golosinas.jpg');">
     <div class="hero-overlay"></div>
-    <h2>Compra mínima: 6 productos (pueden variar)</h2>
+    <h2>Compra mínima: 6 productos</h2>
   </aside>
 
   <main>
@@ -78,14 +78,6 @@
           <p>$7.800</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
-
-        <div class="card">
-          <img src="img/gelatinaDiferentesSabores1.jpg" alt="Gelatinas con formas (30u)" onclick="abrirModal(this)">
-          <h3>Gelatinas con formas (30u)</h3>
-          <p>$6.900</p>
-          <button class="btn-carrito">Agregar al pedido</button>
-        </div>
-
 
         <div class="card">
           <img src="img/mechasMario2.jpg" alt="Mechas magicas" onclick="abrirModal(this)">
@@ -602,6 +594,13 @@
           <img src="img/trak.jpg" alt="Dispenser con chicles" onclick="abrirModal(this)">
           <h3>Dispenser con chicles</h3>
           <p>$5.000</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
+         <div class="card">
+          <img src="img/gelatinaDiferentesSabores1.jpg" alt="Gelatinas con formas (30u)" onclick="abrirModal(this)">
+          <h3>Gelatinas con formas (30u)</h3>
+          <p>$6.900</p>
           <button class="btn-carrito">Agregar al pedido</button>
         </div>
 
