--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
       
       <div class="portfolio">
 
+       <div class="card">
+          <img src="img/bombones_surtidos.jpg" alt="Bombones Surtidos" onclick="abrirModal(this)">
+          <h3>Bocaditos Bel (50 unidades)</h3>
+          <p>$7.200</p>
+          <button class="btn-carrito">Agregar al pedido</button>
+        </div>
+
       <div class="card">
         <img src="img/burbujeros.jpg" alt="Burbujero" onclick="abrirModal(this)">
         <h3>Burbujero(x24u)</h3>
@@ -78,12 +85,6 @@
         <button class="btn-carrito">Agregar al pedido</button>
       </div>
 
-      <div class="card">
-        <img src="img/nutello.jpg" alt="Nutello" onclick="abrirModal(this)">
-        <h3>Nutello(x30u)</h3>
-        <p>$8.500</p>
-        <button class="btn-carrito">Agregar al pedido</button>
-      </div>
 
       <div class="card">
           <img src="img/lataschicas.jpg" alt="Latitas con chicles" onclick="abrirModal(this)">
