Agregue boton de Hacer consulta

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <h3>Bocaditos Bel (50 unidades)</h3>
           <p>$7.200</p>
           <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
         </div>
 
       <div class="card">
@@ -69,6 +70,7 @@
         <h3>Burbujero(x24u)</h3>
         <p>$15.000</p>
         <button class="btn-carrito">Agregar al pedido</button>
+        <button class="btn-carrito">Hacer una consulta</button>
       </div>
 
       <div class="card">
@@ -76,6 +78,7 @@
         <h3>Alcancias con gelatinas</h3>
         <p>$4.500 (CADA UNA)</p>
         <button class="btn-carrito">Agregar al pedido</button>
+        <button class="btn-carrito">Hacer una consulta</button>
       </div>
       
       <div class="card">
@@ -83,6 +86,7 @@
         <h3>Bolas Pokemon con sorpresa y caramelo</h3>
         <p>$10.500</p>
         <button class="btn-carrito">Agregar al pedido</button>
+        <button class="btn-carrito">Hacer una consulta</button>
       </div>
 
 
@@ -91,6 +95,7 @@
           <h3>Latitas con chicles (x30)</h3>
           <p>$11.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
       </div>
 
       <div class="card">
@@ -98,6 +103,7 @@
           <h3>Gomitas Yummy frutilla con crema (500g)</h3>
           <p>$6.500</p>
           <button class="btn-carrito">Agregar al pedido</button>
+          <button class="btn-carrito">Hacer una consulta</button>
       </div>
 
       </div>
